force-app/main/default/objects/echosign_dev1__SIGN_Field_Mapping__c/echosign_dev1__SIGN_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <nameField>
        <label>Target Salesforce Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>