force-app/main/default/objects/echosign_dev1__SIGN_Field_Mapping__c/fields/echosign_dev1__Do_No_Overwrite_Existing__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Do_No_Overwrite_Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Overwrite Existing</label>
    <type>Checkbox</type>
</CustomField>