force-app/main/default/objects/echosign_dev1__SIGN_Field_Mapping__c/fields/echosign_dev1__Do_Not_Write_Empty__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Do_Not_Write_Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Write Empty</label>
    <type>Checkbox</type>
</CustomField>