force-app/main/default/objects/echosign_dev1__SIGN_Field_Mapping__c/fields/echosign_dev1__Index__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>