force-app/main/default/objects/echosign_dev1__SIGN_Field_Mapping__c/fields/echosign_dev1__Source__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Source__c</fullName>
    <label>Source Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>