force-app/main/default/objects/echosign_dev1__SIGN_Field_Mapping__c/fields/echosign_dev1__Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EchoSign Form Field</fullName>
                <default>true</default>
                <label>EchoSign Form Field</label>
            </value>
            <value>
                <fullName>Constant</fullName>
            </value>
            <value>
                <fullName>Agreement Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>